[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/main_screen.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://fonts/Fuente de ejemplo.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[node name="main_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.5
margin_top = -233.0
margin_right = 252.5
margin_bottom = 233.0
custom_constants/separation = 30
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 505.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 505.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 1 )
text = "Proyecto DDL"
align = 1
valign = 1

[node name="start" type="Button" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 505.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="score" type="Button" parent="VBoxContainer"]
margin_top = 274.0
margin_right = 505.0
margin_bottom = 318.0
custom_fonts/font = SubResource( 2 )
text = "Score"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 505.0
margin_bottom = 392.0
custom_constants/separation = 80
alignment = 1

[node name="instruccions" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 246.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Instructions"

[node name="controls" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 326.0
margin_right = 505.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Controls"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 422.0
margin_right = 505.0
margin_bottom = 466.0
custom_constants/separation = 80
alignment = 1

[node name="credits" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 96.0
margin_right = 242.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Credits"
icon_align = 1

[node name="quit" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 322.0
margin_right = 408.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
icon_align = 1

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/instruccions" to="." method="_on_instruccions_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/quit" to="." method="_on_quit_pressed"]
